[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Tom <thomas.spencer@codurance.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "=4.0.0-beta.5"
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
actix-rt = "2.2.0"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
